--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,6 +39,7 @@
         android:background="@drawable/edittext_theme"
         android:ems="10"
         android:inputType="textPersonName"
+        android:text="R123978891"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -61,6 +62,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/edittext_theme"
         android:ems="10"
+        android:text="17836778"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
